# simple_tender_service

./: .mypy.ini  README.md  pyproject.toml
src/tender/adapters/database/data_mappers/: __init__.py
src/tender/application/: __init__.py  maybe.py  transaction_manager.py
src/tender/application/commands/: __init__.py  create_bid.py  create_organization.py  create_review.py  create_tender.py  create_user.py  update_bid.py  update_organization.py  update_review.py  update_tender.py  update_user.py
src/tender/application/constants/: __init__.py  bid_status.py  job_type.py  organization_type.py  tender_status.py
src/tender/application/gateways/: __init__.py  bid.py  organization.py  review.py  tender.py  user.py
src/tender/application/interactors/: __init__.py  create_bid.py  create_organization.py  create_review.py  create_tender.py  create_user.py  update_bid.py  update_organization.py  update_review.py  update_tender.py  update_user.py
src/tender/application/models/: __init__.py  bid.py  organization.py  review.py  tender.py  user.py
src/tender/application/services/: __init__.py
src/tender/infrastructure/: __init__.py
src/tender/infrastructure/database/tables/: __init__.py
