[tool.poetry]
name = "simple-tender-service"
version = "0.1.0"
description = ""
authors = ["Shapovalov_Ilia <ilia-shapovalov04@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ruff = "^0.6.9"
mypy = "^1.11.2"
pre-commit = "^4.0.1"
fastapi = "^0.115.0"
uvicorn = "^0.31.1"
uuid7 = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
